<resources>
    <string name="app_name" translatable="false">Access Control</string>
    <string name="label_today">Today - %1$s</string>
    <string name="company">Company</string>
    <string name="check_in">Check in</string>
    <string name="member">Member</string>
    <string name="achievements">Achievements</string>
    <string name="personal_info">Personal Information</string>
    <string name="full_name">Full name</string>
    <string name="card_code">Card code</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="sex">Sex</string>
    <string name="phone_number">Phone number</string>
    <string name="staff_code">Code</string>
    <string name="address">Address</string>
    <string name="list_of_members">List of members</string>
    <string name="pls_do_not_wear_masks">Please do not wear masks</string>
    <string name="face_recognition_not_possible">Face recognition not possible</string>
    <string name="no_person_in_recognition">No person in recognition frame
</string>
    <string name="multiple_people_in_recognition">There are multiple people in the recognition frame</string>
    <string name="img_quality_not_guaranteed">Image quality is not guaranteed</string>
    <string name="language">EN</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="member_name">Name</string>
    <string name="member_code">Code</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="create_new_member">Create new member</string>
    <string name="card_id">Card ID</string>
    <string name="validate_name">Please enter your full name</string>
    <string name="validate_member_code">Please member code</string>
    <string name="validate_email_empty">Please enter email</string>
    <string name="validate_position_empty">Please enter position</string>
    <string name="validate_email_invalid">Invalid email</string>
    <string name="validate_phone_number">Please enter phone number</string>
    <string name="validate_phone_number_invalid">Invalid phone number</string>
    <string name="ceo">CEO</string>
    <string name="vice_director">Vice Director</string>
    <string name="manager">Manager</string>
    <string name="deputy_manager">Deputy Manager</string>
    <string name="chief_accountant">Chief Accountant</string>
    <string name="employee">Employee</string>
    <string name="not_supported_nfc">Device that do not support NFC</string>
    <string name="unknown">Unknown</string>
    <string name="init_engine_failed">Initialization of the recognition system failed</string>
    <string name="age">Age</string>
    <string name="time_recognition">Time of verification :</string>
    <string name="product_by_kztek">Product developed by Kztek</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_member">Authentication failed: Stranger</string>
    <string name="auth_success_come_in">Authentication successful. Please come in</string>
    <string name="an_error_try_again">An error occurred. Please try again!</string>
    <string name="failed_to_extract_face">Failed to extract facial features</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="open_failed_camera">Error when opening camera</string>
    <string name="verifying">Verifying…</string>
    <string name="user_manual">Please face the screen directly, keep your face steady, and ensure it is clearly visible for accurate recognition</string>
    <string name="register">Register</string>
    <string name="position">Position</string>
    <string name="create_success">Create Success</string>
    <string name="create_failed_try_again">Creation failed. Please try again!</string>
    <string name="welcome_delegate">WELCOME</string>
    <string name="straight_camera">Please look straight at the camera</string>
    <string name="img_quality_not_good">Image quality is not sufficient</string>
    <string name="camera_error">Camera Error</string>
    <string name="registered">You have already registered</string>
    <string name="success">SUCCESS</string>
    <string name="failed">FAILED</string>
    <string name="history">History</string>
    <string name="no_events">No events</string>
    <string name="unidentified">Unidentified</string>
    <string name="not_verified">Not verified</string>
    <string name="member_info">Member information</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="confirm_delete">Confirm deletion</string>
    <string name="confirm_delete_member">Are you sure you want to delete this member?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_list">Empty List</string>
    <string name="swipe_card">Please swipe your employee card</string>
    <string name="not_read_card_code">Card code could not be read. Please try again!</string>
    <string name="complete_information">Please enter complete information</string>
    <string name="face_method">FACE ID</string>
    <string name="card_method">SWIPE CARD</string>
    <string name="information">Information</string>
    <string name="publisher_and_app_version">Device and app publisher information</string>
    <string name="close_app">Close app</string>
    <string name="close_app_sub_title">Close the app and return to the home screen</string>
    <string name="door_lock">Controller</string>
    <string name="setting_door_lock">Configure door opening and closing control parameters</string>
    <string name="change_password">Change password</string>
    <string name="change_password_sub">Change administrator login password</string>
    <string name="feature_under_development">This feature is under development</string>
    <string name="register_low">REGISTER</string>
    <string name="can_not_open_door">Cannot open the door. Please try again!</string>
    <string name="password">Password</string>
    <string name="verification_code">Mã xác minh</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_code">Enter verification code</string>
    <string name="login">LOGIN</string>
    <string name="password_cannot_blank">Password cannot be blank</string>
    <string name="verification_code_cannot_blank">Verification code cannot be blank</string>
    <string name="incorrect_login_info">Incorrect login information</string>
    <string name="publisher">Publisher</string>
    <string name="company_name">KZTEK Investment and Development Joint Stock Company</string>
    <string name="email_company">Email: sales@kztek.net</string>
    <string name="hotline_company">Hotline: 0988 637 099</string>
    <string name="address_company">Address: 1st Floor CT3, Dream Town, Xuan Phuong Ward, Hanoi City</string>
    <string name="device">Device</string>
    <string name="memory">MEMORY</string>
    <string name="used">USED</string>
    <string name="available">AVAILABLE</string>
    <string name="application">Application</string>
    <string name="version">Version</string>
    <string name="updated">Updated</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_verifi_code">Enter new verification code</string>
    <string name="pls_enter_new_password">Please enter new password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="update_successful">Update successful</string>
    <string name="name_company_val">KZTEK INVESTMENT AND DEVELOPMENT JOINT STOCK COMPANY</string>
    <string name="address_company_val">1ST FLOOR, CT3 COMA 6, XUAN PHUONG WARD, HANOI</string>
    <string name="log_title">Log</string>
    <string name="log_sub">Record and monitor the application activities</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="restart_camera">Restarting camera\nPlease wait</string>
    <string name="no_real_person_hide_rgb_view">No real person → hide RGB view</string>
</resources>