<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp">

            <!-- Avatar -->
            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                android:background="@android:drawable/editbox_background_normal"
                android:padding="8dp"
                android:clickable="true"
                android:focusable="true" />

            <!-- Name -->

            <!-- Staff code -->
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@android:drawable/editbox_background_normal"
                android:drawableStart="@drawable/user_name"
                android:drawablePadding="8dp"
                android:hint="@string/member_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:minHeight="54dp"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edtEmployeeCode"
                android:minHeight="54dp"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:drawablePadding="8dp"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/code_staff"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/staff_code"
                android:inputType="text" />

            <!-- Email -->
            <EditText
                android:id="@+id/edtEmail"
                android:minHeight="54dp"
                android:layout_marginBottom="12dp"
                android:imeOptions="actionNext"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/position"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/position"
                android:inputType="textEmailAddress" />

            <!-- Phone number -->
            <EditText
                android:id="@+id/edtPhone"
                android:minHeight="54dp"
                android:layout_marginBottom="12dp"
                android:drawablePadding="8dp"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:background="@android:drawable/editbox_background_normal"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/phone_call_icon"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <!-- Card ID -->

            <!-- Position -->
            <EditText
                android:id="@+id/edtcardID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@android:drawable/editbox_background_normal"
                android:drawableStart="@drawable/member_icon"
                android:drawablePadding="8dp"
                android:hint="@string/card_code"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:enabled="false"
                android:minHeight="54dp"
                android:textColorHint="@android:color/darker_gray" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPositions"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:overScrollMode="never"
                android:scrollbars="none" />

            <!-- Create -->
            <Button
                android:id="@+id/btnCreate"
                android:minHeight="62dp"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:text="@string/create"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
