<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/include_toolbar" />
    <!-- Nội dung chứa 2 ảnh -->
    <LinearLayout
        android:id="@+id/image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center">

        <!-- Ảnh từ camera -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imageFromCamera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>

        <!-- Ảnh từ DB -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imageFromDB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <!-- Thông tin cá nhân -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <!-- BLOCK: Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#F8F9FB"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:elevation="1dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/full_name"
                android:textColor="#A0A0A0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- BLOCK: Staff code -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#F8F9FB"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:elevation="1dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/staff_code"
                android:textColor="#A0A0A0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_staff_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kztek - 0024"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- BLOCK: Sex -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#F8F9FB"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:elevation="1dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textColor="#A0A0A0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- BLOCK: Phone number -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#F8F9FB"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:elevation="1dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number"
                android:textColor="#A0A0A0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="036.467.0825"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- BLOCK: Date of birth -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#F8F9FB"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:elevation="1dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_of_birth"
                android:textColor="#A0A0A0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="04/05/1997"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- BLOCK: Address -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#F8F9FB"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:elevation="1dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address"
                android:textColor="#A0A0A0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trung Kinh Street, Cau Giay, Ha noi"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
