<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Layout Image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="@drawable/hrm_basics_cover"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <!-- Switch Language-->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorBLuePrimary"
            android:textStyle="bold"
            app:thumbTint="@color/blue_gray_light"
            app:trackTint="@color/blue_gray_light"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="12dp"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"/>
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@color/blue_gray_light"
        android:padding="16dp">
        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorBLuePrimary"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="12dp" />
        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorBLuePrimary" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="2"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true">

            <!-- Card 1 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardHistory"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@null"
                        android:src="@drawable/history" />

                    <TextView
                        android:id="@+id/textViewHistory"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_height="wrap_content"
                        android:text="@string/history"
                        android:textSize="23sp"
                        android:textColor="@color/colorBLuePrimary"
                        android:paddingTop="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 2 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardCheckAccess"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@null"
                        android:src="@drawable/check_in" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textSize="23sp"
                        android:textColor="@color/colorBLuePrimary"
                        android:paddingTop="3dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 3 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardMember"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@null"
                        android:src="@drawable/costumer_care" />

                    <TextView
                        android:id="@+id/textViewMember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/member"
                        android:textSize="23sp"
                        android:textColor="@color/colorBLuePrimary"
                        android:paddingTop="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 4 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardSettings"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@null"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/textViewAchieve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/settings"
                        android:textSize="23sp"
                        android:textColor="@color/colorBLuePrimary"
                        android:paddingTop="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>
</LinearLayout>
